fix: z-index on buddha logo fixed
- buddha logo z-index synchronized with the hamburger toggle

--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -33,13 +33,14 @@
     }
 
     > ul > li {
+      @include z-index(menu-nav);
       display: inline-block;
       position: relative;
       list-style: none;
       text-align: center;
 
       .buddha {
-        // fill: $white;
+        fill: $white;
         height: px(46);
       }
     }
